; ModuleID = '/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-strings.c_generate_cesu8_string.c'
source_filename = "/home/carl/AnghaBench/jerryscript/tests/unit-core/extr_test-strings.c_generate_cesu8_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LIT_CESU8_MAX_BYTES_IN_CODE_UNIT = common dso_local global i64 0, align 8
@CESU8_ANY_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i64)* @generate_cesu8_string to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @generate_cesu8_string(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  store i64 0, i64* %6, align 8
  br label %9

9:                                                ; preds = %26, %2
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp slt i64 %10, %11
  br i1 %12, label %13, label %43

13:                                               ; preds = %9
  %14 = load i64, i64* %4, align 8
  %15 = load i64, i64* %6, align 8
  %16 = sub nsw i64 %14, %15
  %17 = load i64, i64* @LIT_CESU8_MAX_BYTES_IN_CODE_UNIT, align 8
  %18 = icmp sgt i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %13
  %20 = load i32, i32* @CESU8_ANY_SIZE, align 4
  br label %26

21:                                               ; preds = %13
  %22 = load i64, i64* %4, align 8
  %23 = load i64, i64* %6, align 8
  %24 = sub nsw i64 %22, %23
  %25 = trunc i64 %24 to i32
  br label %26

26:                                               ; preds = %21, %19
  %27 = phi i32 [ %20, %19 ], [ %25, %21 ]
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = load i32*, i32** %3, align 8
  %30 = call i64 @generate_cesu8_char(i32 %28, i32* %29)
  store i64 %30, i64* %8, align 8
  %31 = load i32*, i32** %3, align 8
  %32 = load i64, i64* %8, align 8
  %33 = call i32 @lit_is_valid_cesu8_string(i32* %31, i64 %32)
  %34 = call i32 @TEST_ASSERT(i32 %33)
  %35 = load i64, i64* %8, align 8
  %36 = load i64, i64* %6, align 8
  %37 = add nsw i64 %36, %35
  store i64 %37, i64* %6, align 8
  %38 = load i64, i64* %8, align 8
  %39 = load i32*, i32** %3, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 %38
  store i32* %40, i32** %3, align 8
  %41 = load i64, i64* %5, align 8
  %42 = add nsw i64 %41, 1
  store i64 %42, i64* %5, align 8
  br label %9

43:                                               ; preds = %9
  %44 = load i64, i64* %6, align 8
  %45 = load i64, i64* %4, align 8
  %46 = icmp eq i64 %44, %45
  %47 = zext i1 %46 to i32
  %48 = call i32 @TEST_ASSERT(i32 %47)
  %49 = load i64, i64* %5, align 8
  ret i64 %49
}

declare dso_local i64 @generate_cesu8_char(i32, i32*) #1

declare dso_local i32 @TEST_ASSERT(i32) #1

declare dso_local i32 @lit_is_valid_cesu8_string(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
